Fix text overflow css in special characters label

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -832,3 +832,7 @@ img.logo {
 .cursor-move {
     cursor: move !important;
 }
+
+.min-inline-size-fix{
+    min-inline-size: max-content;
+}
